objects/BypassPublishPlatformEvent__mdt.object
<CustomObject>
    <description>Use this metadata to store profile or user to bypass publisher event</description>
    <fields>
        <fullName>EntityTypeName__c</fullName>
        <description>Field to store username or profile api name</description>
        <inlineHelpText>Enter profile api name or username to bypass publisher event.</inlineHelpText>
        <label>EntityTypeName</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <description>Field to identity if the entity is user or profile.</description>
        <label>EntityType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                    <default>true</default>
                    <label>Profile</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaltformEventType__c</fullName>
        <inlineHelpText>Define the platformevent</inlineHelpText>
        <label>PaltformEventType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spacepusblisherevent</fullName>
                    <default>true</default>
                    <label>Spacepusblisherevent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BypassPlatformEventPublish</label>
    <pluralLabel>BypassPublishPlatformEvent</pluralLabel>
</CustomObject>